# VisionCane

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: distance_sensor.py  gpio.py  gtts_tts.py  main.py  navigation.py  ultrasonic_sensor.py  voice_command_input2.py  vosk_voice_command.py  whisper_voice_command.py  yolo_tracker.py  yolov8-json.py
test/: map.ipynb  test.py  test_vosk.py  voice.ipynb  voice.tty.ipynb
